@@ -59,9 +59,6 @@ import java.util.*;
    won't go through the blocked/recorded items again.  (Flushes occur
    automatically when DoMerges is finished running.)
 
-   [C]hanges will display the changes in the commit to help you decide the 
-   appropriate action to take.
-
 */
 
 public class DoMerges {
@@ -133,35 +130,127 @@ public class DoMerges {
             System.exit(1);
         }
     }   
-    public static void changes(String ver, String root) throws Exception {
-        Process p;
-        BufferedReader reader;
-        String line;
 
-        p = Runtime.getRuntime().exec(getCommandLine(new String[] {"svn", "diff", "-c", ver, root}));
-        reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        line = reader.readLine();
+    public static void main (String args[]) throws Exception {
+        if (args.length > 0 && "-auto".equals(args[0])) { 
+            auto = true;
+        }
+
+        System.out.println("Updating directory");
+
+        Process p = Runtime.getRuntime().exec(new String[] {"svn", "up", "-r", "head", "."});
+        BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+        String line = reader.readLine();
         while (line != null) {
             System.out.println(line);
             line = reader.readLine();
         }
-        if (p.waitFor() != 0) {
-            System.out.println("ERROR!");
-            reader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+        p.waitFor();
+
+
+        p = Runtime.getRuntime().exec(getCommandLine(new String[] {"svnmerge.py", "avail"}));
+
+        reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+        line = reader.readLine();
+        List<String> verList = new ArrayList<String>();
+        while (line != null) {
+            String vers[] = line.split(",");
+            for (String s : vers) {
+                if (s.indexOf("-") != -1) {
+                    String s1 = s.substring(0, s.indexOf("-"));
+                    String s2 = s.substring(s.indexOf("-") + 1);
+                    int i1 = Integer.parseInt(s1);
+                    int i2 = Integer.parseInt(s2);
+                    for (int x = i1; x <= i2; x++) {
+                        verList.add(Integer.toString(x));
+                    }                
+                } else {
+                    verList.add(s);
+                } 
+            }
+            line = reader.readLine();
+        }
+        p.waitFor();
+        System.out.println("Merging versions (" + verList.size() + "): " + verList);
+
+
+
+
+        String root = null;
+
+        p = Runtime.getRuntime().exec(new String[] {"svn", "info"});
+        reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+        line = reader.readLine();
+        while (line != null) {
+            if (line.startsWith("Repository Root: ")) {
+                root = line.substring("Repository Root: ".length()).trim();
+            }
+            line = reader.readLine();
+        }
+        System.out.println("Root: " + root);
+        p.waitFor();
+
+        List<String> blocks = new ArrayList<String>();
+        List<String> records = new ArrayList<String>();
+
+        int count = 1;
+        for (String ver : verList) {
+            System.out.println("Merging: " + ver + " (" + (count++) + "/" + verList.size() + ")");
+            p = Runtime.getRuntime().exec(new String[] {"svn", "log", "-r" , ver, root});
+            reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
             line = reader.readLine();
             while (line != null) {
                 System.out.println(line);
                 line = reader.readLine();
             }
-            System.exit(1);
+            p.waitFor();
+
+            while (System.in.available() > 0) {
+                System.in.read();
+            }
+            char c = auto ? 'M' : 0;
+            while (c != 'M'
+                   && c != 'B'
+                   && c != 'I'
+                   && c != 'R') {
+                System.out.print("[M]erge, [B]lock, or [I]gnore, [R]ecord only? ");
+                int i = System.in.read();
+                c = Character.toUpperCase((char)i);
+            }
+
+            switch (c) {
+            case 'M':
+                p = Runtime.getRuntime().exec(getCommandLine(new String[] {"svnmerge.py", "merge", "-r", ver}));
+                reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+                line = reader.readLine();
+                while (line != null) {
+                    System.out.println(line);
+                    line = reader.readLine();
+                }
+                if (p.waitFor() != 0) {
+                    System.out.println("ERROR!");
+                    reader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
+                    line = reader.readLine();
+                    while (line != null) {
+                        System.out.println(line);
+                        line = reader.readLine();
+                    }
+                    System.exit(1);
+                }
+                removeSvnMergeInfo();
+                doCommit();
+                break;
+            case 'B':
+                blocks.add(ver);
+                break;
+            case 'R':
+                records.add(ver);
+                break;
+            case 'I':
+                System.out.println("Ignoring");
+                break;
+            }
         }
-    }
-
-    public static void flush(List<String> blocks, List<String> records) throws Exception {
-        Process p;
-        BufferedReader reader;
-        String line;
-
         if (!records.isEmpty()) {
             StringBuilder ver = new StringBuilder();
             for (String s : records) {
@@ -219,140 +308,6 @@ public class DoMerges {
             }
             doCommit();
         }
-        blocks.clear();
-        records.clear();
-    }
-
-    public static void main (String args[]) throws Exception {
-        if (args.length > 0 && "-auto".equals(args[0])) { 
-            auto = true;
-        }
-
-        System.out.println("Updating directory");
-
-        Process p = Runtime.getRuntime().exec(new String[] {"svn", "up", "-r", "head", "."});
-        BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        String line = reader.readLine();
-        while (line != null) {
-            System.out.println(line);
-            line = reader.readLine();
-        }
-        p.waitFor();
-
-
-        p = Runtime.getRuntime().exec(getCommandLine(new String[] {"svnmerge.py", "avail"}));
-
-        reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        line = reader.readLine();
-        List<String> verList = new ArrayList<String>();
-        while (line != null) {
-            String vers[] = line.split(",");
-            for (String s : vers) {
-                if (s.indexOf("-") != -1) {
-                    String s1 = s.substring(0, s.indexOf("-"));
-                    String s2 = s.substring(s.indexOf("-") + 1);
-                    int i1 = Integer.parseInt(s1);
-                    int i2 = Integer.parseInt(s2);
-                    for (int x = i1; x <= i2; x++) {
-                        verList.add(Integer.toString(x));
-                    }                
-                } else {
-                    verList.add(s);
-                } 
-            }
-            line = reader.readLine();
-        }
-        p.waitFor();
-        System.out.println("Merging versions (" + verList.size() + "): " + verList);
-
-
-
-        String root = null;
-
-        p = Runtime.getRuntime().exec(new String[] {"svn", "info"});
-        reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-        line = reader.readLine();
-        while (line != null) {
-            if (line.startsWith("Repository Root: ")) {
-                root = line.substring("Repository Root: ".length()).trim();
-            }
-            line = reader.readLine();
-        }
-        System.out.println("Root: " + root);
-        p.waitFor();
-
-        List<String> blocks = new ArrayList<String>();
-        List<String> records = new ArrayList<String>();
-
-        for (int cur = 0; cur < verList.size(); cur++) {
-            String ver = verList.get(cur);
-            System.out.println("Merging: " + ver + " (" + (cur + 1) + "/" + verList.size() + ")");
-            p = Runtime.getRuntime().exec(new String[] {"svn", "log", "-r" , ver, root});
-            reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            line = reader.readLine();
-            while (line != null) {
-                System.out.println(line);
-                line = reader.readLine();
-            }
-            p.waitFor();
-
-            while (System.in.available() > 0) {
-                System.in.read();
-            }
-            char c = auto ? 'M' : 0;
-            while (c != 'M'
-                   && c != 'B'
-                   && c != 'I'
-                   && c != 'R'
-                   && c != 'F'
-                   && c != 'C') {
-                System.out.print("[M]erge, [B]lock, or [I]gnore, [R]ecord only, [F]lush, [C]hanges? ");
-                int i = System.in.read();
-                c = Character.toUpperCase((char)i);
-            }
-
-            switch (c) {
-            case 'M':
-                p = Runtime.getRuntime().exec(getCommandLine(new String[] {"svnmerge.py", "merge", "-r", ver}));
-                reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
-                line = reader.readLine();
-                while (line != null) {
-                    System.out.println(line);
-                    line = reader.readLine();
-                }
-                if (p.waitFor() != 0) {
-                    System.out.println("ERROR!");
-                    reader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
-                    line = reader.readLine();
-                    while (line != null) {
-                        System.out.println(line);
-                        line = reader.readLine();
-                    }
-                    System.exit(1);
-                }
-                removeSvnMergeInfo();
-                doCommit();
-                break;
-            case 'B':
-                blocks.add(ver);
-                break;
-            case 'R':
-                records.add(ver);
-                break;
-            case 'F':
-                flush(blocks, records);
-                cur--;
-                break;
-            case 'C':
-                changes(ver, root);
-                cur--;
-                break;
-            case 'I':
-                System.out.println("Ignoring");
-                break;
-            }
-        }
-        flush(blocks, records);
     }
 
     private static String[] getCommandLine(String[] args) {
